# nekogo

./: .env.example  .gitignore  LICENSE  README.md  RESOURCES.md  app.config.js  app.json  bg_color.txt  design-qa.md  metro.config.js  package-lock.json  package.json  resize_icon.py  test-kanji-query.ts  test_sqlite.ts
assets/images/: resize_icon.py
docs/: DATA_MODEL.md  FSRS_NATIVE_OPTIMIZER.md  JLPT_LEVELING_ISSUE.md  LEARNING_FLOW.md  PLAN_gloss_zh_upgrade.md
modules/dictionary-audio-sync/: expo-module.config.json  index.ts
modules/fsrs-native/: expo-module.config.json  index.ts
native/fsrs-rust/: .gitignore  Cargo.toml
native/fsrs-rust/src/: lib.rs
plugins/: withModularHeaders.js
scripts/: verify-content-db.mjs  verify-content-repos.mjs  verify-fsrs-training.ts  verify-fsrs.ts  verify-furigana.ts  verify-kanji-data.mjs  verify-kanjivg.ts  verify-login-ui.ts  verify-n5-seed.mjs  verify-vocab-extra.mjs  verify-vocab-seed.mjs
scripts/etl/: apply-etymology.mjs  apply-example-curation.mjs  apply-gloss-fixes.mjs  apply-gloss-v2.mjs  apply-zh-results.mjs  build-content-db.mjs  build-example-zh.mjs  build-frequency-decks.mjs  build-kanji-data.mjs  build-n5-seed.mjs  build-vocab-extra.mjs  build-vocab-seed.mjs  compare-pitch-sources.py  download-sources.mjs  (+14 more)
server/: .env.example  Dockerfile  README.md  api.go  api_test.go  config.go  config_test.go  content_store.go  go.mod  gradio.go  gradio_test.go  import_audio.go  main.go  manifest.example.jsonl  prewarm.go  scheduler.go  scheduler_test.go  service.go  status.go  status_test.go  store.go  store_test.go
(+90 files in other folders)
